some code changes

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -14,7 +14,7 @@
                 <a href="/">📚 Student Management System</a>
             </div>
             <ul class="navbar-menu">
-                <li><a href="/" class="nav-link">Home</a></li>
+                <li><a href="/home" class="nav-link">Home</a></li>
                 {% if is_authenticated %}
                     <li><a href="/dashboard" class="nav-link">Dashboard</a></li>
                     <li><a href="/students" class="nav-link">Students</a></li>
